--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -7,7 +7,7 @@ const icons = false;
 const { projects } = Astro.props;
 ---
 
-<Layout title="Rafael Hirashiki's Portfolio Project" description={}>
+<Layout title="RAFAEL HIRASHIKI's Portfolio Project">
   <ProjectLayoutLinks project={icons} />
   <div
     class="relative z-50 col-start-2 col-span-10 max-sm:col-start-3 max-sm:col-span-9"
