--- a/src/components/ProjectLinkedin.astro
+++ b/src/components/ProjectLinkedin.astro
@@ -8,7 +8,7 @@ import { Image } from "astro:assets";
   target="_blank"
 >
   <Image
-    src="/Images/logo_linkedin.png"
+    src="/images/logo_linkedin.png"
     width={144}
     height={213}
     format="png"
