--- a/src/components/Rafa-pic.astro
+++ b/src/components/Rafa-pic.astro
@@ -9,7 +9,7 @@ const { class: className, ...rest } = Astro.props;
 
 <div class={className} {...rest}>
   <Image
-    src="/Images/rafa.png"
+    src="/images/rafa.png"
     width={450}
     height={450}
     format="webp"
