--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import RafaPic from "../components/Rafa-pic.astro";
   headerIndex={true}
 >
     <Image
-      src="/Images/index-rafa2.webp"
+      src="/images/index-rafa2.webp"
       width={1100}
       height={940}
       format="webp"
