--- a/src/pages/old_a3.astro
+++ b/src/pages/old_a3.astro
@@ -58,8 +58,8 @@ const projects: Project[] = [
     problems: [
       "Optimized My First Page as a Frontend Engineer.",
       "Customized Splide.js library to allow sliders within each slide of a slider",
-      "Resized and Converted Heavy Images to WebP for Optimization.",
-      "Maximized Page Speed Despite Numerous Large Images and Carousels.",
+      "Resized and Converted Heavy images to WebP for Optimization.",
+      "Maximized Page Speed Despite Numerous Large images and Carousels.",
       "Enhanced SEO with Proper HTML Tags, Especially H1.",
       "Followed HTML Best Practices for SEO and Accessibility.",
       "Ensured Design Functionality, Responsiveness, and Performance.",
@@ -98,7 +98,7 @@ const projects: Project[] = [
 ];
 ---
 
-<Layout title="Rafael Hirashiki's Main Projects at A3">
+<Layout title="RAFAEL HIRASHIKI's Main Projects at A3">
   <ProjectLayoutLinks />
   <div
     class="col-start-2 col-span-10 max-sm:col-start-3 max-sm:col-span-9"
@@ -111,7 +111,7 @@ const projects: Project[] = [
           <div class="">
             <div class="card-height w-full overflow-hidden flex justify-center">
               <Image
-                src={`/Images/${project.thumbnail}.webp`}
+                src={`/images/${project.thumbnail}.webp`}
                 width={1100}
                 height={940}
                 format="webp"
