--- a/src/components/ProjectEmailIcon.astro
+++ b/src/components/ProjectEmailIcon.astro
@@ -20,7 +20,7 @@ import { Image } from "astro:assets";
   target="_blank"
 >
   <Image
-    src="/Images/logo_GMAIL.png"
+    src="/images/logo_GMAIL.png"
     width={144}
     height={213}
     format="png"
