--- a/src/components/ProjectFigmaIcon.astro
+++ b/src/components/ProjectFigmaIcon.astro
@@ -6,7 +6,7 @@ const { url } = Astro.props;
 
 <a href={url} class="flex flex-col items-center w-fit" target="_blank">
   <Image
-    src="/Images/logo_figma.svg"
+    src="/images/logo_figma.svg"
     width={144}
     height={213}
     format="svg"
