--- a/src/components/ProjectLayout-BottomStars.astro
+++ b/src/components/ProjectLayout-BottomStars.astro
@@ -49,10 +49,10 @@ const { positionAbsolute } = Astro.props;
   }  col-start-5 col-span-full h-2/3 w-10/12 max-md:col-start-3 max-md:bottom-0 max-md:-right-3 -z-10`}
 >
   <div class="">
-    <img src="/Images/shape-square.svg" class="star star-top star-right" />
+    <img src="/images/shape-square.svg" class="star star-top star-right" />
     <div class="v-bar"></div>
     <div class="h-bar"></div>
-    <img src="/Images/shape-square.svg" class="star star-btm star-left" />
-    <img src="/Images/shape-square.svg" class="star star-btm star-right" />
+    <img src="/images/shape-square.svg" class="star star-btm star-left" />
+    <img src="/images/shape-square.svg" class="star star-btm star-right" />
   </div>
 </div>
