--- a/src/pages/roadmap.astro
+++ b/src/pages/roadmap.astro
@@ -177,7 +177,7 @@ import ProjectLayouHead from "../components/ProjectLayout-Head.astro";
         containers, Redis<i class="fa-solid fa-circle"></i>
       </p>
       <h3 class="grid-item-ball">
-        Mid Full Stack & Systems Engineer
+        Software Engineer
         <i class="fa-solid fa-circle"></i>
       </h3>
 
