--- a/src/pages/solutions.astro
+++ b/src/pages/solutions.astro
@@ -19,13 +19,13 @@ import Layout from "../layouts/Layout.astro";
 
     <ul class="grid grid-cols-2 gap-8">
       <li class="w-full shadow-lg p-4 rounded-lg ">
-        <a href="/solution_kat" class="flex flex-col gap-4">
+        <a href="" class="flex flex-col gap-4">
           <h3 class="text-3xl">Personal Achievements Track System</h3>
           <p>Under construction. More info by mid October 2025</p>
         </a>
       </li>
       <li class="w-full shadow-lg p-4 rounded-lg ">
-        <a href="/solution_kat" class="flex flex-col gap-4">
+        <a href="" class="flex flex-col gap-4">
           <h3 class="text-3xl">A3 Workflow Automation System</h3>
           <p class="mt-auto">Under construction. More info by mid October 2025</p>
         </a>
@@ -38,8 +38,7 @@ import Layout from "../layouts/Layout.astro";
       </li>
       <li class="w-full shadow-lg p-4 rounded-lg ">
         <a href="/solution_kat" class="flex flex-col gap-4">
-          <h3 class="text-3xl">Website with CloudCannon CMS (Kat Portfolio)</h3>
-          <p>Under construction. More info by the end October 2025</p>
+          <h3 class="text-3xl">Website with CloudCannon CMS</h3>
         </a>
       </li>
     </ul>
