--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ interface Props {
 const { title, description, headerIndex } = Astro.props;
 
 import { getCollection } from "astro:content";
+import PageNav from "../components/PageNav.astro";
 const projects = await getCollection("projects");
 ---
 
